--- a/CountersApp/CountersApp.csproj
+++ b/CountersApp/CountersApp.csproj
@@ -25,4 +25,10 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Update="Pages\CountersPage.cshtml.cs">
+        <DependentUpon>CountersPage.cshtml</DependentUpon>
+      </Compile>
+    </ItemGroup>
+
 </Project>
